# rust-cli-wallet

./: .gitignore  Cargo.toml  Dockerfile  README.md
accounts/: acc1.json  acc2.json  account1.txt
accounts/acc1/: keystore.json
accounts/main-acc/: keystore.json
accounts/new-acc/: keystore.json
config/: chains.json
scripts/: generate_mod_using_abi.rs
src/: account.rs  beneficiaries.rs  fiat.rs  ierc20.rs  keystore.rs  main.rs  networks.rs  provider.rs  tokens.rs  utils.rs  wallet.rs
