[package]
name = "rust-cli-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers="2.0.7"
tokio = { version = "1", features = ["full"] }
bip39 = "2.0"
rand = "0.8"
dialoguer = "0.10.4"
serde = "1.0.164"
serde_json = "1.0.97"
password-hash = "0.5.0"
bcrypt = "0.14.0"
coins-bip32 = "0.8.3"
hex = "0.4.3"
base58 = "0.2.0"
web3-keystore = "0.5.2"
lazy_static = "1.4.0"
spinners = "4.1.0"
rpassword = "7.2.0"
colored = "2.0.4"
reqwest = "0.11.22"

[package.metadata.deb]
maintainer = "Muhammad Waleed <mujahidwaleed11@gmail.com>"
copyright = "2021, 2021 <mujahidwaleed11@gmail.com>"

[build]
# Specify additional files/directories to include in the package
include = ["abis/**", "config/**"]
exclude = ["scripts/**"]
